--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
-
-<head>
-    <title>Simulation - Scheduler</title>
+    <head>
+        <title>Simulation - Scheduler</title>
+        <!-- Js Script link -->
     <script src="./pacman.js"></script>
 </head>
 
 <body>
     <img id="PacMan" src="images/pacman1.png" width='200' onclick="Run()" style="position:absolute"> </img>
 </body>
-
 </html>
